--- a/sprint2/views/productCart.html
+++ b/sprint2/views/productCart.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>carrito</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+rel="stylesheet" />
 </head>
 <body>
-    
+    <header>
+        <div class="caja-superior">
+            <img src="/img/Logo.png" alt="">
+            <div class="search" >
+                <input placeholder=" Buscar... " type="search">
+                <i class="fas fa-search"></i>
+            </div>
+            <nav>
+                <ul class="navbar">
+                    <li><a href="">Inicio</a></li>
+                    <li><a href="">Productos</a></li>
+                    <li><a href="">Preguntas frecuentes</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+                <ul class="login-bar">
+                    <li><i class="far fa-id-card"></i><a href=""> Registrate </a>
+                    <li><i class="fas fa-user-circle"></i><a href=""> Iniciar sesión </a>
+                    <li><a href=""></a><i class="fas fa-shopping-cart"></i>
+                </ul>
+            </nav>
+        </div>
+        <div class="caja-inferior">
+            <div class="burger-menu">
+                <i class="fas fa-bars"></i>
+            </div>
+        </div>
+    </header>
+
 </body>
 </html>
