estructura inicial-carrito/done

--- a/sprint2/views/productCart.html
+++ b/sprint2/views/productCart.html
@@ -11,6 +11,7 @@
 rel="stylesheet" />
 </head>
 <body>
+
     <header>
         <div class="caja-superior">
             <img src="/img/Logo.png" alt="">
@@ -38,6 +39,134 @@ rel="stylesheet" />
             </div>
         </div>
     </header>
+
+    <main>
+        <section class="caja">
+            <h2>Tu pedido</h2>
+            <h4><i class="fas fa-angle-left"></i>Continuar comprando</h4>
+            <section class="caja-pedido">
+                <p>Producto</p>
+                <article>
+                    <a href="Eliminar">Eliminar<i class="fas fa-trash-alt"></i></a>
+                    <img class="foto-producto" src="/img/Mate-Olaf.jpg" alt="">
+                    <p class="nombre-producto">Mate Olaf</p>
+                    <p class="cantidad-producto">Cantidad:</p>
+                    <div class="caja-contador">
+                        <button type="button" class="caja-resta">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                        <div class="caja-numero">
+                            <input class="numero" type="number" value="1">
+                        </div>
+                        <button type="button" class="caja-suma">
+                            <i class="fas fa-plus"></i>
+                        </button>
+                    </div>
+                    <p class="precio-producto">Precio:</p>
+                    <p class="valor-precio">$0,00</p>
+                    <p class="subtotal-producto">Sub total:</p>
+                    <p class="valor-subtotal">$0,00</p>
+                </article>
+                <article>
+                    <a href="Eliminar">Eliminar<i class="fas fa-trash-alt"></i></a>
+                    <img class="foto-producto" src="/img/Taza-Chanchito.jpg" alt="">
+                    <p class="nombre-producto">Taza-Chanchito</p>
+                    <p class="cantidad-producto">Cantidad:</p>
+                    <div class="caja-contador">
+                        <button type="button" class="caja-resta">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                        <div class="caja-numero">
+                            <input class="numero" type="number" value="1">
+                        </div>
+                        <button type="button" class="caja-suma">
+                            <i class="fas fa-plus"></i>
+                        </button>
+                    </div>
+                    <p class="precio-producto">Precio:</p>
+                    <p class="valor-precio">$0,00</p>
+                    <p class="subtotal-producto">Sub total:</p>
+                    <p class="valor-subtotal">$0,00</p>
+                </article>
+                <article>
+                    <a href="Eliminar">Eliminar<i class="fas fa-trash-alt"></i></a>
+                    <img class="foto-producto" src="/img/Tetera-Sra Potss.jpg" alt="">
+                    <p class="nombre-producto">Tetera-Sra Potss</p>
+                    <p class="cantidad-producto">Cantidad:</p>
+                    <div class="caja-contador">
+                        <button type="button" class="caja-resta">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                        <div class="caja-numero">
+                            <input class="numero" type="number" value="1">
+                        </div>
+                        <button type="button" class="caja-suma">
+                            <i class="fas fa-plus"></i>
+                        </button>
+                    </div>
+                    <p class="precio-producto">Precio:</p>
+                    <p class="valor-precio">$0,00</p>
+                    <p class="subtotal-producto">Sub total:</p>
+                    <p class="valor-subtotal">$0,00</p>
+                </article>
+                <article>
+                    <a href="Eliminar">Eliminar<i class="fas fa-trash-alt"></i></a>
+                    <img class="foto-producto" src="/img/Azucarera-PatoLucas.jpg" alt="">
+                    <p class="nombre-producto">Azucarera-PatoLucas</p>
+                    <p class="cantidad-producto">Cantidad:</p>
+                    <div class="caja-contador">
+                        <button type="button" class="caja-resta">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                        <div class="caja-numero">
+                            <input class="numero" type="number" value="1">
+                        </div>
+                        <button type="button" class="caja-suma">
+                            <i class="fas fa-plus"></i>
+                        </button>
+                    </div>
+                    <p class="precio-producto">Precio:</p>
+                    <p class="valor-precio">$0,00</p>
+                    <p class="subtotal-producto">Sub total:</p>
+                    <p class="valor-subtotal">$0,00</p>
+                </article>
+            </section>
+            <section class="caja-resumen">
+                <article>
+                    <div class="titulo-resumen">
+                        <h3>Resumen de tu compra</h3>
+                    </div>
+                    <div class="subtotal-resumen">
+                        <p>Sub total (sin costo de envio):</p>
+                        <p>$0,00</p>
+                    </div>
+                    <div>
+                        <i class="far fa-window-minimize"></i>
+                    </div>
+                    <div class="caja-entrega">
+                        <div class="caja-envio">
+                            <p><i class="fas fa-truck"></i>Envío a domicilio:</p>
+                            <p><input type="radio" name="entrega" value="Envío a domicilio" />Correo Argentino-Envío a domicilio</p>
+                            <p class="valor">$0,00</p>
+                        </div>
+                        <div class="caja-retiro">
+                            <p><i class="fas fa-map-marker-alt"></i>Retiro del local:</p>
+                            <p><input type="radio" name="entrega" value="Retiro del local" />Dirección: Av. Siempre Viva 7777, Springfield</p>
+                        </div>
+                    </div>
+                    <div>
+                        <h3>Total:</h3>
+                        <h3>$0,00</h3>
+                    </div>
+                </article>
+            </section>
+            <section class="caja-compra">
+                <div>
+                    <button type="submit">Realizar compra</button>
+                </div>
+            </section>
+        </section>
+    </main>
 
 </body>
 </html>
