--- a/sprint2/views/index.html
+++ b/sprint2/views/index.html
@@ -1,13 +1,207 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/public/css/style.css">
+    <title>Mercado liebre</title>
 </head>
-<body>
+
+<body class="home">
+ 
     
+    <section><img src="/public/images/img-home-banner.jpg" width="100%" alt=""></section>
+    <main>
+ 
+        <section>
+
+            
+            <article class="tazadona">
+                <img src="/public/images/tazadona.jpg" width="100%" alt="">
+                <div class="detail-product">
+
+                    <div class="contenedor-precio-descuento">
+   
+                        <p class="precio">$1.770</p>
+ 
+                    </div>
+                    <h4>Taza Dona</h4>
+                </div>
+            </article>
+
+            <article class="tazallama">
+                <img src="/public/images/img-macbook-pro-2019.jpg" width="100%" alt="">
+                <div class="detail-product">
+ 
+                    <div class="contenedor-precio-descuento">
+                        <p class="precio">$2.000</p>
+      
+                    </div>
+                    <h4>Taza Llama</h4>
+                </div>
+            </article>
+
+            <article>
+                <img src="/public/images/img-samsung-galaxy-s10.jpg" width="100%" alt="">
+                <div class="detail-product">
+ 
+                    <div class="contenedor-precio-descuento">
+                        <p class="precio">$1.500</p>
+  
+                    </div>
+                    <h4>Taza Inodoro</h4>
+                </div>
+            </article>
+
+            <article>
+                <img src="/public/images/img-tv-samsung-smart.jpg" width="100%" alt="">
+                <div class="detail-product">
+   
+                    <div class="contenedor-precio-descuento">
+
+                        <p class="precio">$2.200</p>
+           
+                    <h4>Taza Cubo</h4>
+                </div>
+            </article>
+        </section>
+     
+        <section>
+            <article>
+                <img src="/public/images/img-cafetera-moulinex.jpg" width="100%" alt="">
+                <div class="detail-product">
+     
+                    <div class="contenedor-precio-descuento">
+                        <p class="precio">$1.770</p>
+          
+                    </div>
+                    <h4>Taza Dona</h4>
+                </div>
+            </article>
+
+            <article>
+                <img src="/public/images/img-macbook-pro-2019.jpg" width="100%" alt="">
+                <div class="detail-product">
+       
+                    <div class="contenedor-precio-descuento">
+                        <p class="precio">$2.000</p>
+                   
+                    </div>
+                    <h4>Taza Llama</h4>
+                </div>
+            </article>
+
+            <article>
+                <img src="/public/images/img-samsung-galaxy-s10.jpg" width="100%" alt="">
+                <div class="detail-product">
+ 
+                    <div class="contenedor-precio-descuento">
+                        <p class="precio">$1.500</p>
+                   
+                    </div>
+                    <h4>Taza Inodoro</h4>
+                </div>
+            </article>
+
+            <article>
+                <img src="/public/images/img-tv-samsung-smart.jpg" width="100%" alt="">
+                <div class="detail-product">
+ 
+                    <div class="contenedor-precio-descuento">
+                        <p class="precio">$2.200</p>
+                
+                    </div>
+                    <h4>Taza Cubo</h4>
+                </div>
+            </article>
+
+        </section>
+
+
+
+        <div class="botones">
+            <button type="reset" id="reset">Ver Más Productos</button>
+ 
+        </div>
+
+
+
+
+    </main>
+
+ <!---FOOTER------------------------------------------------------------>
+    <footer>
+ 
+        <div class="footer">
+          <div class="envioycontacto caja">
+            <div class="arriba ">
+     
+             
+     
+     
+              <div class="titulofooter">Formas de Envío</div>
+              <div class="correo">
+                 <a href="#"><i class="fas fa-shipping-fast"></i> CORREO ARGENTINO</a>
+              </div>
+              <div class="oca">
+                 <a href="#"><i class="fas fa-truck"></i> OCA</a>
+              </div>
+     
+            </div>
+     
+     
+            
+            <div class="bajo caja">
+     
+     
+              <div class="titulofooter">Contacto</div>
+              <div class="telefono">
+                <a href="#"><i class="fas fa-phone-volume"></i> +541162628888</a>
+              </div>
+              <div class="email">
+                <a href="#"><i class="fas fa-envelope"></i> hirschmannsol@gmail.com</a>
+                <div class="ubicacion">
+                 <a href="#"><i class="fas fa-map-marked-alt"></i> Av. Siempre Viva 7777 , Springfield</a>
+               
+            
+      
+               </div>
+           
+     
+              </div>
+            </div>
+          </div>
+          <div class="medio caja">
+            <div class="titulofooter">Medios de Pago</div>
+            <div class="mercadopagologo">
+          
+        
+         </div>
+     
+          </div>
+     
+     
+          <div class="derecha caja">
+     
+     
+            <div class="titulofooter">Nuestras Redes Sociales</div>
+             
+              <div class="iconos">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                
+              </div>
+      
+          </div>
+        </div>
+      
+      </footer>
+
+      <!---FOOTER------------------------------------------------------------>
 </body>
+
 </html>
