--- a/sprint2/public/css/productCart.css
+++ b/sprint2/public/css/productCart.css
@@ -1,34 +1,235 @@
-/*colores*/
-:root{
-    --SalmonObscuro: #ffb8a1;
-    --SalmonClaro: #f7d3b8;
-    --Rosa: #f2cdcd;
-    --Blanco: #ffffff;
-    --Negro: #0a0a0a;
-    --GrisObscuro: #1B1B1B;
-    --GrisClaro: #c4c4c4;
-    --GrisMedio: #666;
-}
 
-.productCart section.caja{
+ /*contenedor general*/
+.carrito main section.caja{
     padding: 10px;
-    border:solid 1px rgb(0, 225, 255);
     display: flex;
-}
-.productCart section h2{
-    border:solid 1px rgb(204, 0, 255);
-}
-.productCart section h4{
-    border:solid 1px rgb(12, 95, 81);
-}
-.productCart section.caja-pedido{
-    border:solid 1px rgb(185, 91, 2);
-}
-.productCart section.caja-resumen{  
-    border:solid 1px solid 1pxrgb(255, 0, 21);
-}
-.productCart section.caja-compra{  
-    border:solid 1px rgb(0, 38, 255);
+    flex-direction: column;
 }
 
+/*titulo*/
+.carrito main section.caja h2{
+    margin-left: 20px;
+}
 
+/*volver a inicio*/
+.carrito main section.caja a{
+    display: flex;
+    justify-content: flex-end;
+    font-weight: bold;
+    font-size: 14px;
+    color: var(--Negro);
+    margin-right: 10px;
+}
+.carrito main section.caja a i{
+    padding: 2px 4px;
+}
+/*titulo pedido*/
+main section.caja h3{
+    font-size: 16px;
+    text-transform: uppercase;
+    margin: 0px 10px 5px;
+}
+
+/*contenedor general del pedido*/
+.carrito main section.pedido article{
+    display: flex;
+    flex-wrap: wrap;
+    /*box-shadow: 0px 0px 8px rgb(100, 100, 100);*/
+    background-color: var(--Rosa);
+    margin: 0 10px 5px;
+    padding: 5px;
+}
+
+/*boton eliminar*/
+.carrito main section.pedido article div.caja-eliminar{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    height: 20px;
+}
+.carrito main section.pedido article div.caja-eliminar button{
+    width: 60px;
+    padding: 2px;
+    color: var(--Negro);
+    font-weight: bold;
+    font-size: 10px;
+    border: solid 1px var(--GrisClaro);
+    background-color: var(--Blanco);
+}
+.carrito main section.pedido article div.caja-eliminar button i{
+    margin-left: 5px;
+}
+
+/*imagen y nombre del pedido*/
+.carrito main section.pedido article div.caja-img-nombre{
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.carrito main section.pedido article div.caja-img-nombre img{
+    width: 90%;
+    height: 87%;
+    align-self: center;
+}
+.carrito main section.pedido article div.caja-img-nombre p{
+    height: 10%;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 3px;
+}
+
+/*contador, precio y valor del pedido*/
+.carrito main section.pedido article div.info{
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-self: center;
+} 
+.carrito main section.pedido article div.info div.cantidad-contador{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.carrito main section.pedido article div.info div.cantidad-contador p{
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    color: var(--Negro);
+    padding: 5px 0;
+}
+.carrito main section.pedido article div.info div.cantidad-contador div.contador{
+    display: flex;
+    align-self: center;
+    background-color: var(--GrisClaro);
+}
+.carrito main section.pedido article div.info div.cantidad-contador div.contador button{
+    width: 30px;
+    height: 20px;
+    background-color: var(--Blanco);
+    border: solid 1px var(--GrisClaro);align-self: center;
+}
+.carrito main section.pedido article div.info div.cantidad-contador div.contador button i{
+    color: var(--GrisMedio);
+}
+.carrito main section.pedido article div.info div.cantidad-contador div.contador div.numero{
+    border: solid 1px var(--GrisClaro);
+    
+}
+.carrito main section.pedido article div.info div.cantidad-contador div.contador div.numero input{
+    width: 30px;
+    height: 18px;
+    padding: 0 10px;
+    border: none;
+}
+.carrito main section.pedido article div.info div.caja-precio, div.caja-subtotal{
+    display: flex;
+    justify-content: space-around;
+}
+.carrito main section.pedido article div.info div.caja-precio p{
+    padding-top: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--GrisMedio);
+}
+.carrito main section.pedido article div.info div.caja-subtotal p{
+    padding-top: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--GrisMedio);
+}
+
+/*resumen del pedido*/
+
+.carrito main section.resumen{
+    background-color: rgb(221, 220, 220);
+    margin: 5px;
+}
+.carrito main section.resumen article{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+    /*titulo*/
+.carrito main section.resumen article h3.titulo {
+    text-transform: uppercase;
+    align-self: center;
+    margin-top: 5px;
+}
+    /*sub-total*/
+.carrito main section.resumen article div.subtotal{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 10px 10px 10px;
+}
+.carrito main section.resumen article div.subtotal p{
+    font-size: 12px;
+    color: var(--Negro);
+}
+    /*tipo de entrega*/
+.carrito main section.resumen article div.entrega p{
+    font-size: 12px;
+    color: var(--Negro);
+    margin: 0 10px 5px 10px;
+    padding: 5px;
+}
+.carrito main section.resumen article div.entrega p i{
+    margin: 0 5px;
+}
+.carrito main section.resumen article div.entrega div.caja-envio{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 10px 5px 10px;
+    box-shadow: 0px 0px 8px rgb(100, 100, 100);
+}
+.carrito main section.resumen article div.entrega div.caja-envio p.envio{
+    width: 70%;
+    margin: 0;
+    padding: 5px;
+}
+.carrito main section.resumen article div.entrega div.caja-retiro{
+    margin: 0 10px 5px 10px;
+    box-shadow: 0px 0px 8px rgb(100, 100, 100);
+}
+.carrito main section.resumen article div.entrega div.caja-retiro p.envio{
+    margin: 0;
+    padding: 5px;
+}
+.carrito main section.resumen article div.entrega div p.envio input{
+    margin: 0 5px 0 0;
+}
+.carrito main section.resumen article div.entrega div.caja-envio p.valor{
+    width: 20%;
+    align-self: center;
+    margin: 0;
+}
+    /*total*/
+    .carrito main section.resumen article div.total{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    
+}
+.carrito main section.resumen article div.total h3{
+    color: var(--GrisObscuro);
+    margin: 10px 0;
+}
+    /*boton compra*/
+.carrito main section.resumen article div.compra{
+    align-self: center;
+}
+.carrito main section.resumen article div.compra button{
+    width: 220px;
+    height: 40px;
+    justify-content: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: solid 2px var(--GrisClaro);
+    background-color: var(--Blanco);
+    color: var(--GrisMedio);
+    margin-bottom: 10px;
+}
