--- a/sprint2/public/css/header.css
+++ b/sprint2/public/css/header.css
@@ -38,9 +38,12 @@ header div.caja-superior{
     padding: 10px 10px 5px;
 }
 
-header div img{
+header div a{
     width: 50%;
     order: 0;
+}
+header div a img{
+    width: 100%;
 }
 
 header div.search{
@@ -61,25 +64,25 @@ header div nav{
     width: 100%;
     order: -1;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 header nav ul.navbar li{
     display: none;
 }
 header div nav ul li a{
-    color: var(--Negro);
+    color: var(--GrisMedio);
     font-size: 12px;
     text-transform: uppercase;
     font-weight: bold;
-    display: none;
 }
 header nav ul.login-bar{
     display: flex;
     flex-direction: row;
+    width: 80%;
+    justify-content: space-between;
 }
-header div nav ul li i{
+header div nav ul.login-bar li a i{
     padding: 0 3px;
-    color: var(--GrisMedio);
 }
 
 /*Parte inferior del header: menu hamburguesa*/
@@ -107,7 +110,7 @@ header div div.burger-menu{
     header div.caja-inferior{
         display: none;
     }
-    header div img{
+    header div a{
         width: 35%;
         padding-bottom: 10px;
         order: -1;
@@ -141,19 +144,11 @@ header div div.burger-menu{
     header div nav ul.login-bar{
         width: 35%;
         display: flex;
-        flex-direction: row;
         justify-content: space-around;
     }
     header div nav ul li a{
-        display: flex;
         align-items:center;
         margin-left: 2px;
-    }
-    header div nav ul li{
-        display: flex;
-        flex-direction: row;
-    }
-    header div nav ul li i{
         color: var(--Negro);
     }
 } 
