--- a/sprint2/public/css/productCart.css
+++ b/sprint2/public/css/productCart.css
@@ -1,3 +1,4 @@
+/*------------mobile-----------------*/
 
  /*contenedor general*/
 .carrito main section.caja{
@@ -7,11 +8,13 @@
 }
 
 /*titulo*/
+
 .carrito main section.caja h2{
     margin-left: 20px;
 }
 
 /*volver a inicio*/
+
 .carrito main section.caja a{
     display: flex;
     justify-content: flex-end;
@@ -23,7 +26,9 @@
 .carrito main section.caja a i{
     padding: 2px 4px;
 }
+
 /*titulo pedido*/
+
 main section.caja h3{
     font-size: 16px;
     text-transform: uppercase;
@@ -31,6 +36,7 @@ main section.caja h3{
 }
 
 /*contenedor general del pedido*/
+
 .carrito main section.pedido article{
     display: flex;
     flex-wrap: wrap;
@@ -39,13 +45,11 @@ main section.caja h3{
     margin: 0 10px 5px;
     padding: 5px;
 }
-
-/*boton eliminar*/
+    /*boton eliminar*/
 .carrito main section.pedido article div.caja-eliminar{
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    height: 20px;
 }
 .carrito main section.pedido article div.caja-eliminar button{
     width: 60px;
@@ -59,35 +63,33 @@ main section.caja h3{
 .carrito main section.pedido article div.caja-eliminar button i{
     margin-left: 5px;
 }
-
-/*imagen y nombre del pedido*/
-.carrito main section.pedido article div.caja-img-nombre{
+    /*imagen del pedido*/
+.carrito main section.pedido article div.caja-img{
     width: 50%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
 }
-.carrito main section.pedido article div.caja-img-nombre img{
-    width: 90%;
-    height: 87%;
-    align-self: center;
-}
-.carrito main section.pedido article div.caja-img-nombre p{
-    height: 10%;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 3px;
+.carrito main section.pedido article div.caja-img img{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
 }
 
-/*contador, precio y valor del pedido*/
+    /* informacion del pedido*/
 .carrito main section.pedido article div.info{
     width: 50%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-self: center;
-} 
+}
+.carrito main section.pedido article div.info p{
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    margin: 5px 0;
+}
 .carrito main section.pedido article div.info div.cantidad-contador{
     display: flex;
     flex-wrap: wrap;
@@ -98,7 +100,6 @@ main section.caja h3{
     font-weight: bold;
     text-align: center;
     color: var(--Negro);
-    padding: 5px 0;
 }
 .carrito main section.pedido article div.info div.cantidad-contador div.contador{
     display: flex;
@@ -129,13 +130,11 @@ main section.caja h3{
     justify-content: space-around;
 }
 .carrito main section.pedido article div.info div.caja-precio p{
-    padding-top: 5px;
     font-size: 14px;
     font-weight: bold;
     color: var(--GrisMedio);
 }
 .carrito main section.pedido article div.info div.caja-subtotal p{
-    padding-top: 5px;
     font-size: 14px;
     font-weight: bold;
     color: var(--GrisMedio);
@@ -159,10 +158,12 @@ main section.caja h3{
     margin-top: 5px;
 }
     /*sub-total*/
-.carrito main section.resumen article div.subtotal{
+.carrito main section.resumen article div.subtotal {
     display: flex;
     justify-content: space-between;
-    margin: 0 10px 10px 10px;
+    margin: 5px 10px;
+    width: 250px;
+    align-self: center;
 }
 .carrito main section.resumen article div.subtotal p{
     font-size: 12px;
@@ -202,13 +203,13 @@ main section.caja h3{
     margin: 0 5px 0 0;
 }
 .carrito main section.resumen article div.entrega div.caja-envio p.valor{
-    width: 20%;
+    width: 50px;
     align-self: center;
     margin: 0;
 }
     /*total*/
-    .carrito main section.resumen article div.total{
-    width: 60%;
+.carrito main section.resumen article div.total{
+    width: 50%;
     display: flex;
     justify-content: space-between;
     align-self: center;
@@ -233,3 +234,79 @@ main section.caja h3{
     color: var(--GrisMedio);
     margin-bottom: 10px;
 }
+
+    
+/*------------tablet-----------------*/
+@media (min-width: 768px){
+    /*contenedor general del pedido*/
+    .carrito main section.pedido article {
+        height: 200px;
+    }
+    /*imagen del pedido*/
+    .carrito main section.pedido article div.caja-img{
+    width: 30%;
+    }
+    .carrito main section.pedido article div.caja-img img {
+    width: 170px;
+    height: 170px;
+    padding: 0 0 05px;
+    align-self: center;
+    }
+    /* informacion del pedido*/
+    .carrito main section.pedido article div.info{
+    width: 70%;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    }
+    .carrito main section.pedido article div.info p{
+        order: -1;
+        width: 100%;
+        font-size: 18px;
+        margin: 10px 0;
+    }
+    .carrito main section.pedido article div.info div.caja-precio{
+        order: 0;
+        width: 30%;
+        flex-direction: column;
+    }
+    .carrito main section.pedido article div.info div.caja-precio p{
+        font-size: 16px;
+        color: var(--Negro);
+    }
+    .carrito main section.pedido article div.info div.cantidad-contador{
+        order: 1;
+        width: 30%;
+        font-size: 16px;
+    }
+    .carrito main section.pedido article div.info div.cantidad-contador p{
+        font-size: 16px;
+    }
+    .carrito main section.pedido article div.info div.caja-subtotal{
+        order: 2;
+        color: var(--Negro);
+        width: 30%;
+        flex-direction: column;
+        font-size: 16px;
+    }
+    .carrito main section.pedido article div.info div.caja-subtotal p{
+        color: var(--Negro);
+        font-size: 16px;
+    }
+    /*resumen del pedido*/
+    .carrito main section.resumen {
+        margin: 10px 20px;
+    }
+    .carrito main section.resumen article {
+        margin: 10px 20px;
+    }
+    .carrito main section.resumen article div.subtotal {
+        width: 350px;
+    }
+    .carrito main section.resumen article div.total {
+        width: 30%;
+    }
+
+}
+
+
