--- a/sprint2/views/index.html
+++ b/sprint2/views/index.html
@@ -6,8 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+rel="stylesheet" />
 </head>
 <body>
-    
+    <body class="carrito">
+
+        <header>
+            <div class="caja-superior">
+                <a href="/"><img src="/img/Logo.png" alt=""></a>
+                <div class="search" >
+                    <input placeholder=" Buscar... " type="search">
+                    <i class="fas fa-search"></i>
+                </div>
+                <nav>
+                    <ul class="navbar">
+                        <li><a href="">Inicio</a></li>
+                        <li><a href="">Productos</a></li>
+                        <li><a href="">Preguntas frecuentes</a></li>
+                        <li><a href="">Contacto</a></li>
+                    </ul>
+                    <ul class="login-bar">
+                        <li><a href="/register"><i class="far fa-id-card"></i> Registrate </a>
+                        <li><a href="/login"><i class="fas fa-user-circle"></i> Iniciar sesión </a>
+                        <li><a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+                    </ul>
+                </nav>
+            </div>
+            <div class="caja-inferior">
+                <div class="burger-menu">
+                    <i class="fas fa-bars"></i>
+                </div>
+            </div>
+        </header>
+    </body>
+    </html>
 </body>
 </html>
