--- a/sprint2/views/productCart.html
+++ b/sprint2/views/productCart.html
@@ -14,7 +14,7 @@ rel="stylesheet" />
 
     <header>
         <div class="caja-superior">
-            <img src="/img/Logo.png" alt="">
+            <a href="/"><img src="/img/Logo.png" alt=""></a>
             <div class="search" >
                 <input placeholder=" Buscar... " type="search">
                 <i class="fas fa-search"></i>
@@ -27,9 +27,9 @@ rel="stylesheet" />
                     <li><a href="">Contacto</a></li>
                 </ul>
                 <ul class="login-bar">
-                    <li><i class="far fa-id-card"></i><a href=""> Registrate </a>
-                    <li><i class="fas fa-user-circle"></i><a href=""> Iniciar sesión </a>
-                    <li><a href=""></a><i class="fas fa-shopping-cart"></i>
+                    <li><a href="/register"><i class="far fa-id-card"></i> Registrate </a>
+                    <li><a href="/login"><i class="fas fa-user-circle"></i> Iniciar sesión </a>
+                    <li><a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
                 </ul>
             </nav>
         </div>
@@ -55,11 +55,11 @@ rel="stylesheet" />
                     <div class="caja-eliminar">
                         <button type="submit">Eliminar<i class="fas fa-trash-alt"></i></button>
                     </div>
-                    <div class="caja-img-nombre">
+                    <div class="caja-img">
                         <img src="/img/Mate-Olaf.jpg" width="100" height="100" alt="">
-                        <p >Mate-Olaf</p>
                     </div>
                     <div class="info">
+                        <p class="nombre">Mate-Olaf</p>
                         <div class="cantidad-contador">
                             <p class="cantidad">Cantidad:</p>
                             <div class="contador">
@@ -88,11 +88,11 @@ rel="stylesheet" />
                     <div class="caja-eliminar">
                         <button type="submit">Eliminar<i class="fas fa-trash-alt"></i></button>
                     </div>
-                    <div class="caja-img-nombre">
+                    <div class="caja-img">
                         <img src="/img/Taza-Chanchito.jpg" width="100" height="100" alt="">
-                        <p>Taza-Chanchito</p>
                     </div>
                     <div class="info">
+                        <p class="nombre">Taza-Chanchito</p>
                         <div class="cantidad-contador">
                             <p class="cantidad">Cantidad:</p>
                             <div class="contador">
@@ -121,11 +121,11 @@ rel="stylesheet" />
                     <div class="caja-eliminar">
                         <button type="submit">Eliminar<i class="fas fa-trash-alt"></i></button>
                     </div>
-                    <div class="caja-img-nombre">
+                    <div class="caja-img">
                         <img src="/img/Tetera-Sra Potss.jpg" width="100" height="100" alt="">
-                        <p>Tetera-Sra Potss</p>
                     </div>
                     <div class="info">
+                        <p class="nombre">Tetera-Sra Potss</p>
                         <div class="cantidad-contador">
                             <p class="cantidad">Cantidad:</p>
                             <div class="contador">
@@ -183,6 +183,78 @@ rel="stylesheet" />
         </section>
 
     </main>
+
+    <!---FOOTER------------------------------------------------------------>
+    <footer>
+ 
+        <div class="footer">
+          <div class="envioycontacto caja">
+            <div class="arriba ">
+     
+             
+     
+     
+              <div class="titulofooter">Formas de Envío</div>
+              <div class="correo">
+                 <a href="#"><i class="fas fa-shipping-fast"></i> CORREO ARGENTINO</a>
+              </div>
+              <div class="oca">
+                 <a href="#"><i class="fas fa-truck"></i> OCA</a>
+              </div>
+     
+            </div>
+     
+     
+            
+            <div class="bajo caja">
+     
+     
+              <div class="titulofooter">Contacto</div>
+              <div class="telefono">
+                <a href="#"><i class="fas fa-phone-volume"></i> +541162628888</a>
+              </div>
+              <div class="email">
+                <a href="#"><i class="fas fa-envelope"></i> hirschmannsol@gmail.com</a>
+                <div class="ubicacion">
+                 <a href="#"><i class="fas fa-map-marked-alt"></i> Av. Siempre Viva 7777 , Springfield</a>
+               
+            
+      
+               </div>
+           
+     
+              </div>
+            </div>
+          </div>
+          <div class="medio caja">
+            <div class="titulofooter">Medios de Pago</div>
+            <div class="mercadopagologo">
+          
+        
+         </div>
+     
+          </div>
+     
+     
+          <div class="derecha caja">
+     
+     
+            <div class="titulofooter">Nuestras Redes Sociales</div>
+             
+              <div class="iconos">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                
+              </div>
+      
+          </div>
+        </div>
+      
+      </footer>
+
+      <!---FOOTER------------------------------------------------------------>
+</body>
 
 </body>
 </html>
