--- a/sprint2/public/css/login.css
+++ b/sprint2/public/css/login.css
@@ -11,7 +11,7 @@
 
 /*formulario en general*/
 .login main .formulario{
-    background-color: #FFB8A1;
+    background-color:#F8D0D0;
     margin: 0 auto;
     margin: 60px 10px;
     padding: 10px;
@@ -26,6 +26,7 @@
     margin: 30px 0;
     text-align: center;
     font-weight: unset;
+    font-weight: bold;
 }
 
 
@@ -47,11 +48,12 @@
 
 /*seccion para rellenar*/
 .login main .formulario .box-form input{
-    background-color: #FBEFF8;
+    background-color: white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 100px;
     border:none;
     height: 25px;
+    font-size: 12px;
 }
 
 
@@ -67,7 +69,7 @@
     border-radius: 20%;
     border: none;
     color: #ffffff;
-    background-color: rgba(138, 113, 113, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     width: fit-content;
     height: 27px;
     font-size: 10px;
@@ -106,7 +108,8 @@
     .login main .formulario{
         box-shadow: 6px 6px 10px 4px rgba(0, 0, 0, 0.25);
         border-radius: 36px;
-        margin: 60px 30px;
+        margin: 60px auto;
+        width: 70%;
     }
 
     /* titulo inicio de sesion*/
@@ -140,6 +143,7 @@
         height: 33px;
         width: 100%;
         align-self: center;
+        font-size: 18px;
     }
 
 
@@ -172,6 +176,10 @@
 
 /*DESKTOP*/
 @media(min-width:769px){
+    /*formulario en general*/
+    .login main .formulario{
+        width: 60%;
+    }
     /* titulo inicio de sesion*/
     .login main .formulario p{
         margin: 100px 0;
@@ -197,6 +205,7 @@
     .login main .formulario .box-form input{
         width: 90%;
         height: 58px;
+        font-size: 30px;
     }
 
 
