--- a/sprint2/views/login.html
+++ b/sprint2/views/login.html
@@ -21,7 +21,7 @@
             </div>
             <nav>
                 <ul class="navbar">
-                    <li><a href="">Inicio</a></li>
+                    <li><a href="/">Inicio</a></li>
                     <li><a href="">Productos</a></li>
                     <li><a href="">Preguntas frecuentes</a></li>
                     <li><a href="">Contacto</a></li>
