--- a/sprint2/public/css/login.css
+++ b/sprint2/public/css/login.css
@@ -24,6 +24,7 @@
 .login main .formulario p{
     width: 100%;
     margin: 30px 0;
+    text-transform: uppercase;
     text-align: center;
     font-weight: unset;
     font-weight: bold;
@@ -43,6 +44,7 @@
 .login main .formulario .box-form label{
     font-size: 12px;
     margin: 0 0 2px 10px;
+    text-transform: uppercase;
 }
 
 
@@ -114,7 +116,7 @@
 
     /* titulo inicio de sesion*/
     .login main .formulario p{
-        font-size: 25px;
+        font-size: 20px;
     }
 
 
@@ -125,11 +127,6 @@
     
 
 
-    /*titulo email*/
-    .login main .formulario .box-form label.email{
-        margin-left: 25px;
-    }
-    
     /*titulo email-contraseña*/
     .login main .formulario .box-form label{
         font-size: 14px;
@@ -182,40 +179,38 @@
     }
     /* titulo inicio de sesion*/
     .login main .formulario p{
-        margin: 100px 0;
-        font-size: 40px;
+        margin: 45px 0;
+        font-size: 24px;
     }
 
 
     /* caja de formulario */
     .login main .formulario .box-form{
-        margin: 70px 0;
+        margin: 50px 0;
         padding: 0 5%;
     }
     
 
     /*titulo email-contraseña*/
     .login main .formulario .box-form label, .login main .formulario .box-form label.email {
-        font-size: 23px;
-        margin-left: 9%;
+        font-size: 14px;
+        margin-left: 38px;
     }
 
 
     /*seccion para rellenar*/
     .login main .formulario .box-form input{
         width: 90%;
-        height: 58px;
-        font-size: 30px;
+        height: 45px;
+        font-size: 25px;
     }
-
 
     /*boton iniciar*/
     .login main .formulario .iniciar-ayuda button{
-        height: 45px;
-        font-size: 25px;
-        padding: 8px 30px 9px;
+        font-size: 17px;
 
     }
+
 
     /*olvidaste tu contraseña*/
     .login main .formulario .iniciar-ayuda a{
