agrega boton carrito

--- a/sprint2/public/css/header.css
+++ b/sprint2/public/css/header.css
@@ -85,7 +85,7 @@ header div nav ul.login-bar li a i{
     padding: 0 3px;
 }
 
-/*Parte inferior del header: menu hamburguesa*/
+/*Parte inferior del header: boton hamburguesa*/
 header div.caja-inferior{
     background-color: var(--Rosa);
     padding: 10px;
@@ -96,10 +96,12 @@ header div div.burger-menu{
     background-color: var(--GrisMedio); 
     display: block; 
     color: var(--Blanco); 
-    font-size: 25px; 
     margin: auto;
     text-align: center; 
     border-radius: 10%;
+}
+header div div.burger-menu i{
+    font-size: 25px;
 }
 
 /*tablet*/
