--- a/sprint2/views/productDetail.html
+++ b/sprint2/views/productDetail.html
@@ -86,6 +86,8 @@
        
                
             </div>
+
+            <a href="/productCart" class="myButton"> <i class="fas fa-shopping-cart"> Agergar al carrito</i></a>
           </div>
        
        
