--- a/sprint2/public/css/productDetail.css
+++ b/sprint2/public/css/productDetail.css
@@ -66,7 +66,24 @@
     background-color: #fff;
   }
 
-
+  .myButton {
+    display:inline-block;
+    background-color:#ffb8a1;
+     padding:0.3em 1.2em;
+     border:0.16em solid rgba(255,255,255,0);
+     border-radius:2em;
+     box-sizing: border-box;
+     text-decoration:none;
+     font-family:'Roboto',sans-serif;
+     font-weight:300;
+     color:#000000;
+     text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+     text-align:center;
+     transition: all 0.2s;
+   }
+   .myButton:hover {
+     border-color: rgb(200, 50, 50);
+   }
 
 
 
@@ -106,7 +123,9 @@
      
   }
    
-  
+  .myButton{
+    width: 50%;
+  }
 
    
 
