--- a/sprint2/views/productDetail.html
+++ b/sprint2/views/productDetail.html
@@ -83,7 +83,7 @@
                 <span>1</span>
                 <button>   +     </button>
               </div>
-       
+              <a href="/productCart" class="myButton">Añadir al carrito</a>
                
             </div>
           </div>
