--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -24,160 +24,152 @@
   </div>
 
   
-<script src="javascripts/glider.js"> </script>
-<script src="javascripts/home.js"></script>
-
-	<!--fin carrousel-->
-        
-    <body class="home"> 
-    <main>
- 
-        <section>
-
-            
-            <article class="tazadona">
-                <img src="/img/tazadona.jpg" width="100%" alt="">
-                <div class="detail-product">
-                 
-                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
-                    <h4>Taza Dona </h4>
-                    <div class="contenedor-precio-descuento">
-                  
-                        <p class="precio">$1.770 </p>
-                
-                        <a href="/products/detail" class="myButton">Ver Mas</a>
-                    
-                    </div>
-            
-                </div>
-            </article>
-
-            <article class="tazallama">
-                <img src="/img/tazallama.jpg" width="100%" alt="">
-
-
-                <div class="detail-product">
-                
-                        <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
-                    <h4>Taza Llama</h4>
-                    <div class="contenedor-precio-descuento">
-                        <p class="precio">$2.000</p>
-                        <a href="/products/detail" class="myButton">Ver Mas</a>
-                    </div>
-    
-                </div>
-            </article>
-
-            <article>
-                <img src="/img/tazainodoro.jpg" width="100%" alt="">
-                <div class="detail-product">
-                    
-                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
-                    <h4>Taza Inodoro</h4>
-                    <div class="contenedor-precio-descuento">
-                        <p class="precio">$1.500</p>
-                        <a href="/products/detail" class="myButton">Ver Mas</a>
-                    </div>
+  <script src="javascripts/glider.js"> </script>
+  <script src="javascripts/home.js"></script>
+  
+      <!--fin carrousel-->
+          
+      <body class="home"> 
+      <main>
+   
+          <section>
+  
               
-                </div>
-            </article>
-
-            <article>
-                <img src="/img/tazacubo.jpg" width="100%" alt="">
-                <div class="detail-product">
-                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
-                    <h4>Taza Cubo</h4>
-                    
-                    
-                    <div class="contenedor-precio-descuento">
-
-                        <p class="precio">$2.200</p>
-                        <a href="/products/detail" class="myButton">Ver Mas</a>
-                    </div>
-                    
-                </div>
-            </article>
-        </section>
-     
-        <section>
-            <article>
-                <img src="/img/tazadona.jpg" width="100%" alt="">
-                <div class="detail-product">
-                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
-                    <h4>Taza Dona</h4>
-                    
+              <article class="tazadona">
+                  <img src="/img/tazadona.jpg" width="100%" alt="">
+                  <div class="detail-product">
                    
-                    <div class="contenedor-precio-descuento">
-                        <p class="precio">$1.770</p>
-                        <a href="/products/detail" class="myButton">Ver Mas</a>
-                    </div>
+                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
+                      <h4>Taza Dona </h4>
+                      <div class="contenedor-precio-descuento">
+                    
+                          <p class="precio">$1.770 </p>
                   
-                </div>
-            </article>
-
-            <article>
-                <img src="/img/tazallama.jpg" width="100%" alt="">
-                <div class="detail-product">
-                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
-                    <h4>Taza Llama</h4>
-                    
-                    
-                    <div class="contenedor-precio-descuento">
-                        <p class="precio">$2.000</p>
-                        <a href="/products/detail" class="myButton">Ver Mas</a>
-                    </div>
+                          <a href="/products/detail" class="myButton">Ver Mas</a>
+                      
+                      </div>
+              
+                  </div>
+              </article>
+  
+              <article class="tazallama">
+                  <img src="/img/tazallama.jpg" width="100%" alt="">
+  
+  
+                  <div class="detail-product">
                   
-                </div>
-            </article>
-
-            <article>
-                <img src="/img/tazainodoro.jpg" width="100%" alt="">
-                <div class="detail-product">
-                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
-                    <h4>Taza Inodoro</h4>
+                          <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
+                      <h4>Taza Llama</h4>
+                      <div class="contenedor-precio-descuento">
+                          <p class="precio">$2.000</p>
+                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                      </div>
+      
+                  </div>
+              </article>
+  
+              <article>
+                  <img src="/img/tazainodoro.jpg" width="100%" alt="">
+                  <div class="detail-product">
+                      
+                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
+                      <h4>Taza Inodoro</h4>
+                      <div class="contenedor-precio-descuento">
+                          <p class="precio">$1.500</p>
+                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                      </div>
+                
+                  </div>
+              </article>
+  
+              <article>
+                  <img src="/img/tazacubo.jpg" width="100%" alt="">
+                  <div class="detail-product">
+                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
+                      <h4>Taza Cubo</h4>
+                      
+                      
+                      <div class="contenedor-precio-descuento">
+  
+                          <p class="precio">$2.200</p>
+                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                      </div>
+                      
+                  </div>
+              </article>
+          </section>
+       
+          <section>
+              <article>
+                  <img src="/img/tazadona.jpg" width="100%" alt="">
+                  <div class="detail-product">
+                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
+                      <h4>Taza Dona</h4>
+                      
+                     
+                      <div class="contenedor-precio-descuento">
+                          <p class="precio">$1.770</p>
+                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                      </div>
                     
+                  </div>
+              </article>
+  
+              <article>
+                  <img src="/img/tazallama.jpg" width="100%" alt="">
+                  <div class="detail-product">
+                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
+                      <h4>Taza Llama</h4>
+                      
+                      
+                      <div class="contenedor-precio-descuento">
+                          <p class="precio">$2.000</p>
+                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                      </div>
                     
-                    <div class="contenedor-precio-descuento">
-                        <p class="precio">$1.500</p>
-                        <a href="/products/detail" class="myButton">Ver Mas</a>
-                    </div>
+                  </div>
+              </article>
+  
+              <article>
+                  <img src="/img/tazainodoro.jpg" width="100%" alt="">
+                  <div class="detail-product">
+                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
+                      <h4>Taza Inodoro</h4>
+                      
+                      
+                      <div class="contenedor-precio-descuento">
+                          <p class="precio">$1.500</p>
+                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                      </div>
+                     
+                  </div>
+              </article>
+  
+              <article>
+                  <img src="/img/tazacubo.jpg" width="100%" alt="">
+                  <div class="detail-product">
+                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
+                      <h4>Taza Cubo</h4>
+                      
+                     
+                      <div class="contenedor-precio-descuento">
+                          <p class="precio">$2.200</p>
                    
-                </div>
-            </article>
-
-            <article>
-                <img src="/img/tazacubo.jpg" width="100%" alt="">
-                <div class="detail-product">
-                    <a href="/productCart"> <i class="fas fa-shopping-cart"></i></a>
-                    <h4>Taza Cubo</h4>
+                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                      </div>
                     
-                   
-                    <div class="contenedor-precio-descuento">
-                        <p class="precio">$2.200</p>
-                 
-                        <a href="/products/detail" class="myButton">Ver Mas</a>
-                    </div>
-                  
-                </div>
-            </article>
-
-        </section>
-
-
-
-        <div class="botones">
-            <button type="reset" id="reset">Ver Más Productos</button>
- 
-        </div>
-
-
-
-
-    </main>
-
- <!---FOOTER------------------------------------------------------------>
- <%- include("partials/footer") %>
-<!---FOOTER------------------------------------------------------------>
-</body>
-
-</html>
+                  </div>
+              </article>
+  
+          </section>
+  
+          <div class="botones">
+              <button type="reset" id="reset">Ver Más Productos</button>
+   
+          </div>
+      </main>
+  
+      <%- include('partials/footer') %>
+  
+  </body>
+  </html>
