--- a/sitio/views/login.ejs
+++ b/sitio/views/login.ejs
@@ -27,13 +27,12 @@
             </form>
         </div>
         <div class="registrar">
-            <p>¿No tenes cuenta?<a href="/register">Haz click para registrarte</a></p>
+            <p>¿No tenes cuenta?<a href="/users/register">Haz click para registrarte</a></p>
         </div>
     </main>
 
     <!---FOOTER------------------------------------------------------------>
-    <%- include("partials/footer") %>
-    
+    <%- include('./partials/footer') %>
 </body>
 
 </html>
