--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -15,7 +15,8 @@
             <ul class="login-bar">
                 <li><a href="/users/register"><i class="far fa-id-card"></i> Registrate </a>
                 <li><a href="/users/login"><i class="fas fa-user-circle"></i> Iniciar sesión </a>
-                <li><a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+                <li><a href="/products/cart"><i class="fas fa-shopping-cart"></i></a>
+                <li><a href="/admin"><i class="far fa-user-circle"></i> Administrador </a>
             </ul>
         </nav>
     </div>
