--- a/sitio/views/register.ejs
+++ b/sitio/views/register.ejs
@@ -33,7 +33,7 @@
             </form>
         </div>
         <div class="iniciar-sesion">
-            <p>¿Tenes cuenta?<a href="/login"> Haz click para iniciar sesion</a></p>
+            <p>¿Tenes cuenta?<a href="/users/login"> Haz click para iniciar sesion</a></p>
         </div>
     </main>
     
