--- a/sitio/views/productModify.ejs
+++ b/sitio/views/productModify.ejs
@@ -8,85 +8,71 @@
 <main class="container bg-white">
 
 
-<div class="row">
-  <div class="col-12.col-md-10 col-lg-8 mt-5 mx-auto">
-
-    <div class="card p-3">
-
-
-      <div class="card-header text-light " style="background-color: #ffb8a1">
-<h4>Modificar Producto</h4>
-</div>
-
-
-
-<div class="card-body">
-      <form>
-        <div class="mb-3">
-          <label for="name" class="form-label">Nombre</label>
-          <input type="name" class="form-control" 
-          placeholder="Nombre de Producto" 
-          id="exampleInputNAme" aria-describedby="name">
- 
+  <div class="row">
+    <div class="col-12.col-md-10 col-lg-8 mt-5 mx-auto">
+  
+      <div class="card p-3">
+  
+  
+        <div class="card-header text-light " style="background-color: #ffb8a1">
+          <h4>Modificar Producto</h4>
         </div>
-        <div class="mb-3">
-
-          <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-            <label for="floatingTextarea2">Descripción</label>
-          </div>
-
-         
   
-        <div class="mb-3">
-  <div class="form-floating">
-    <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
-      <option selected>Seleccionar una Categoría</option>
-      <option value="1">Tazas</option>
-      <option value="2">Teteras</option>
-      <option value="3">Otros</option>
-    </select>
-    <label for="floatingSelect">Categoría</label>
-  </div>
-</div>
+        <div class="card-body">
+          <form class="row">
+            <div class="mb-3">
+              <label for="name" class="form-label">Nombre</label>
+              <input name="name" type="text" class="form-control" placeholder="Nombre de Producto" id="name" >
+            </div>
+            
+            <div class="mb-3">
+              <div class="form-floating">
+                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" name="description"></textarea>
+                <label for="description">Descripción</label>
+              </div>
+            </div>
   
-        <div class="mb-3">
-          <label for="formFileMultiple" class="form-label">Cargar fotos</label>
-          <input class="form-control" type="file" id="formFileMultiple" accept="image/x-png,image/jpeg" multiple>
-          
-          </div>
-          <div class="mb-3">
-            <label for="price" class="form-label">Precio</label>
-            <input type="number" class="form-control" 
-            placeholder="Precio" 
-            id="exampleInputprice" aria-describedby="price">
-   
-          </div>
-
-
-          <div class="mb-3">
-            <label for="discount" class="form-label">Indicar Descuento</label>
-            <input type="discount" class="form-control" 
-            placeholder="Descuento" 
-            id="exampleInputprice" aria-describedby="discount">
-   
-          </div>
-
-
-<div class="col-12 col-md-6">
-
- 
-        <button type="submit" class="btn btn-dark">Agregar</button>
-      </form>
-
+            <div class="mb-3">
+              <div class="form-floating">
+                <select class="form-select" id="category" aria-label="Floating label select example" name="category" >
+                  <option selected>Seleccionar una Categoría</option>
+                  <option value="1">Tazas</option>
+                  <option value="2">Teteras</option>
+                  <option value="3">Otros</option>
+                </select>
+                <label for="category">Categoría</label>
+              </div>
+            </div>
+            
+            <div class="mb-3">
+              <label for="image" class="form-label" >Cargar fotos </label>
+              <input class="form-control" type="file" id="image" accept="image/x-png,image/jpeg" name="image" multiple>
+            </div>
+  
+            <div class="mb-3">
+              <label for="price" class="form-label">Precio</label>
+              <input type="number" class="form-control" placeholder="Precio" id="price" name="price" aria-describedby="price">
+            </div>
+  
+            <div class="mb-3">
+              <label for="discount" class="form-label">Indicar Descuento</label>
+              <input type="number" class="form-control" 
+              placeholder="Descuento" 
+              id="discount" name="discount" aria-describedby="discount">
+            </div>
+            
+            <div class="col-12 col-md-6">
+              <button type="submit" class="btn btn-dark">Agregar</button>
+            </div>
+          </form>
+        </div>  
+  
+      </div>
+  
     </div>
-    </div>
-
-    </div>
-    
+  
   </div>
-
-</div>
+  
 
 </main>
  
